<package format="2">
  <name>cpu_monitor</name>
  <version>0.0.0</version>
  <description>cpu_monitor</description>
  <author email="alex@alex.com">Alex Spitzer</author>
  <maintainer email="alex@alex.com">Alex Spitzer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-psutil</exec_depend>
</package>
